--- a/206-Kubernetes-Microservice-Phonebook/project_206_with_secret/web_server_deployment.yml
+++ b/206-Kubernetes-Microservice-Phonebook/project_206_with_secret/web_server_deployment.yml
@@ -1,33 +1,29 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name:  backend-deployment
+  name: webserver-deployment
   namespace: default
   labels:
-    team: devops
+    app: web-server
 spec:
   selector:
     matchLabels:
       app: web-server
       tier: backend
-  replicas: 2
+  replicas: 1
   template:
     metadata:
       labels:
-        app:  web-server
+        app: web-server
         tier: backend
     spec:
       containers:
-      - name: web-server
+      - name: webserver
         image: balaban/web-server
         envFrom:
           - secretRef:
               name: appsecret
-        env:
-          - name: MYSQL_DATABASE_HOST
-            valueFrom:
-              configMapKeyRef:
-                name: server-config
-                key: MYSQL_DATABASE_HOST
+          - configMapRef:
+              name: server-config
         ports:
         - containerPort: 80
