--- a/206-Kubernetes-Microservice-Phonebook/project_206/server_config.yaml
+++ b/206-Kubernetes-Microservice-Phonebook/project_206/server_config.yaml
@@ -1,6 +1,7 @@
-apiVersion: v1
 kind: ConfigMap
+apiVersion: v1
 metadata:
   name: server-config
+  namespace: default
 data:
   MYSQL_DATABASE_HOST: mysql-service
