--- a/206-Kubernetes-Microservice-Phonebook/project_206_with_secret/mysql_deployment.yml
+++ b/206-Kubernetes-Microservice-Phonebook/project_206_with_secret/mysql_deployment.yml
@@ -4,7 +4,7 @@ metadata:
   name: mysql-deployment
   namespace: default
   labels:
-    team: devops
+    app: mysql
 spec:
   selector:
     matchLabels:
@@ -15,10 +15,6 @@ spec:
       labels:
         app: mysql
     spec:
-      volumes:
-        - name: pv-storage
-          persistentVolumeClaim:
-            claimName: mypvc    
       containers:
       - name: mysql
         image: mysql:5.7
@@ -28,5 +24,10 @@ spec:
         ports:
         - containerPort: 3306
         volumeMounts:
-          - mountPath: /var/lib/mysql
-            name: pv-storage
+        - name: db-storage
+          mountPath: /var/lib/mysql
+      volumes:
+        - name: db-storage
+          persistentVolumeClaim:
+            claimName: database-persistent-volume-claim
+      restartPolicy: Always
