--- a/206-Kubernetes-Microservice-Phonebook/project_206_with_secret/mysql_service.yaml
+++ b/206-Kubernetes-Microservice-Phonebook/project_206_with_secret/mysql_service.yaml
@@ -3,13 +3,12 @@ kind: Service
 metadata:
   name: mysql-service
   namespace: default
-  labels:
-    team: devops
 spec:
   selector:
     app: mysql
   type: ClusterIP
   ports:
-    - protocol: TCP
-      port: 3306
-      targetPort: 3306
+  - name: db
+    protocol: TCP
+    port: 3306
+    targetPort: 3306
