--- a/206-Kubernetes-Microservice-Phonebook/project_206_with_secret/persistent_volume_claim.yaml
+++ b/206-Kubernetes-Microservice-Phonebook/project_206_with_secret/persistent_volume_claim.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mypvc
-  labels:
-    type: local
+  name: database-persistent-volume-claim
+  namespace: default
 spec:
-  storageClassName: manual
+  storageClassName: manuel
   accessModes:
   - ReadWriteOnce
   resources:
     requests:
-      storage: 20Gi
+      storage: 5Gi
