--- a/206-Kubernetes-Microservice-Phonebook/project_206_with_secret/result_server_deployment.yml
+++ b/206-Kubernetes-Microservice-Phonebook/project_206_with_secret/result_server_deployment.yml
@@ -1,33 +1,29 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name:  frontend-deployment
+  name: resultserver-deployment
   namespace: default
   labels:
-    team: devops
+    app: result-server
 spec:
   selector:
     matchLabels:
       app: result-server
       tier: frontend
-  replicas: 2
+  replicas: 1
   template:
     metadata:
       labels:
-        app:  result-server
+        app: result-server
         tier: frontend
     spec:
       containers:
-      - name: result-server
+      - name: resultserver
         image: balaban/result-server
         envFrom:
           - secretRef:
               name: appsecret
-        env:
-          - name: MYSQL_DATABASE_HOST
-            valueFrom:
-              configMapKeyRef:
-                name: server-config
-                key: MYSQL_DATABASE_HOST
+          - configMapRef:
+              name: server-config
         ports:
         - containerPort: 80
