--- a/206-Kubernetes-Microservice-Phonebook/project_206_with_secret/result_server_service.yaml
+++ b/206-Kubernetes-Microservice-Phonebook/project_206_with_secret/result_server_service.yaml
@@ -3,15 +3,14 @@ kind: Service
 metadata:
   name: resultserver-service
   namespace: default
-  labels:
-    team: devops
 spec:
   selector:
-    app:  result-server
+    app: result-server
     tier: frontend
   type: NodePort
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
-      nodePort: 30002
+  - name: resultserver
+    protocol: TCP
+    port: 80
+    targetPort: 80
+    nodePort: 30002
