--- a/22_ingress/todoingress.yaml
+++ b/22_ingress/todoingress.yaml
@@ -4,8 +4,7 @@ metadata:
   name: todoingress
 spec:
   rules:
-    - host: todoapp.com
-      http:
+    - http:
         paths:
           - path: /
             pathType: Prefix
