--- a/22_ingress/appingress.yaml
+++ b/22_ingress/appingress.yaml
@@ -6,8 +6,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
-    - host: k8sfundamentals.com
-      http:
+    - http:
         paths:
           - path: /blue
             pathType: Prefix
