--- a/test.yaml
+++ b/test.yaml
@@ -1,21 +1,10 @@
 apiVersion: v1
-kind: Service
+kind: Pod
 metadata:
-  name: MYAPP
-  namespace: default
+  name: succeededpod
 spec:
-  selector:
-    app: MYAPP
-  type: ClusterIP
-  sessionAffinity: None
-  sessionAffinityConfig:
-    clientIP:
-      timeoutSeconds: 10800
-  ports:
-  - name: MYAPP
-    protocol: TCP
-    port: 
-    targetPort: 
-    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
-    # you can specify a value in the `spec.ports[*].nodePort` field.
-    nodePort: 
+  containers:
+  - name: succeededcontainer
+    image: ubuntu:latest
+    command: ["sh", "-c", "echo 'Hello Kubernetes' && sleep 20"]
+  restartPolicy: Never  
