--- a/test.yaml
+++ b/test.yaml
@@ -1,24 +1,5 @@
 apiVersion: v1
-kind: Pod
+kind: Namespace
 metadata:
-  name: multicontainer
-spec:
-  containers:
-  - name: webcontainer
-    image: nginx
-    ports:
-    - containerPort:  80
-      name:  http
-    volumeMounts:
-    - name: sharedvolume
-      mountPath: /usr/share/nginx/html
-  - name: sidecarcontainer
-    image: busybox
-    volumeMounts:
-    - name: sharedvolume
-      mountPath: /var/log 
-    command: ["/bin/sh"]
-    args: ["-c", "while true; do wget -O /var/log/index.html https://raw.githubusercontent.com/ozgurozturknet/hello-world/master/index.html; sleep 15; done"]    
-  volumes:
-    - name: sharedvolume
-      emptyDir: {}
+  name: Dev
+  lablels: Dev
