--- a/8_deployment/deploy.yaml
+++ b/8_deployment/deploy.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+apiVersion: apps/v1  # dry-run -o yaml > deploy.yaml olarak oluşturdum.
 kind: Deployment
 metadata:
   creationTimestamp: null
