--- a/10_inclass_1/mypod.yaml
+++ b/10_inclass_1/mypod.yaml
@@ -8,6 +8,6 @@ metadata:
 spec:
   containers:
   - name: mynginx
-    image: nginx
+    image: "nginx:latest"
     ports:
     - containerPort:  80
