--- a/test.yaml
+++ b/test.yaml
@@ -6,9 +6,10 @@ metadata:
 spec:
   selector:
     app: MYAPP
-  type: ClusterIP
+  type: NodePort
   ports:
   - name: MYAPP
     protocol: TCP
     port: 3000
     targetPort: 5000 
+    nodePort: 30007
