--- a/12_inclass_2/web-flask.yaml
+++ b/12_inclass_2/web-flask.yaml
@@ -2,17 +2,20 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: web-flask-deploy
+  labels:
+    app: web-flask
+  namespace: demo
 spec:
+  replicas: 3
   selector:
     matchLabels:
       app: web-flask
-  replicas: 3
   minReadySeconds: 10
   strategy:
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 1
     type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   template:
     metadata:
       labels:
