--- a/microservices-project/admin-server-deployment.yaml
+++ b/microservices-project/admin-server-deployment.yaml
@@ -23,3 +23,5 @@ spec:
         image: 828895145536.dkr.ecr.us-east-1.amazonaws.com/microservices-project:admin-server-b7
         ports:
         - containerPort: 9090
+      imagePullSecrets:
+      - name: regcred  
