--- a/microservices-project/mysql-server-service.yaml
+++ b/microservices-project/mysql-server-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: tracing-server
+  name: mysql-server
 spec:
   selector:
-    app: tracing-server
+    app: mysql-server
   type: ClusterIP
   ports:
   - protocol: TCP
-    port: 9411
-    targetPort: 9411
+    port: 3306
+    targetPort: 3306
