--- a/test.yaml
+++ b/test.yaml
@@ -1,34 +1,19 @@
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: v1
+kind: Service
 metadata:
   annotations:
     kompose.cmd: kompose convert -f docker-compose.yml -o petclinic_chart/templates
     kompose.version: 1.28.0 (c4137012e)
   creationTimestamp: null
   labels:
-    io.kompose.service: tracing-server
-  name: tracing-server
+    io.kompose.service: mysql-server
+  name: mysql-server
 spec:
-  replicas: 1
+  ports:
+    - name: "3306"
+      port: 3306
+      targetPort: 3306
   selector:
-    matchLabels:
-      io.kompose.service: tracing-server
-  strategy: {}
-  template:
-    metadata:
-      annotations:
-        kompose.cmd: kompose convert -f docker-compose.yml -o petclinic_chart/templates
-        kompose.version: 1.28.0 (c4137012e)
-      creationTimestamp: null
-      labels:
-        io.kompose.network/k8s-default: "true"
-        io.kompose.service: tracing-server
-    spec:
-      containers:
-        - image: openzipkin/zipkin
-          name: tracing-server
-          ports:
-            - containerPort: 9411
-          resources: {}
-      restartPolicy: Always
-status: {}
+    io.kompose.service: mysql-server
+status:
+  loadBalancer: {}
