--- a/microservices-project/api-gateway-ingress.yaml
+++ b/microservices-project/api-gateway-ingress.yaml
@@ -2,6 +2,9 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: api-gateway
+  annotations:
+    kubernetes.io/ingress.class: 'nginx'
+    nginx.ingress.kubernetes.io/rewrite-target: /  
 spec:
   rules:
   - host: "petclinic.deryabalaban.online"
