--- a/microservices-project/grafana-server-deployment.yaml
+++ b/microservices-project/grafana-server-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:  
       containers:
       - name: grafana-server
-        image: 828895145536.dkr.ecr.us-east-1.amazonaws.com/microservices-project:grafana-server-b7
+        image: '828895145536.dkr.ecr.us-east-1.amazonaws.com/microservices-project:grafana-server-b7'
         ports:
         - containerPort: 3000
       imagePullSecrets:
