--- a/microservices-project/vets-service-deployment.yaml
+++ b/microservices-project/vets-service-deployment.yaml
@@ -17,10 +17,10 @@ spec:
       initContainers:
       - name: init-discovery-server
         image: busybox
-        command: ["-c", "until nc -z discovery-server:8761; do echo waiting for discovery-server; sleep 5; done"]   
+        command: ['sh', '-c', 'until nc -z discovery-server:8761; do echo waiting for discovery-server; sleep 2; done;']  
       containers:
       - name: vets-service
-        image: 828895145536.dkr.ecr.us-east-1.amazonaws.com/microservices-project:vets-service-b7
+        image: '828895145536.dkr.ecr.us-east-1.amazonaws.com/microservices-project:vets-service-b7'
         ports:
         - containerPort: 8083
       imagePullSecrets:
