--- a/microservices-project/api-gateway-ingress.yaml
+++ b/microservices-project/api-gateway-ingress.yaml
@@ -3,17 +3,17 @@ kind: Ingress
 metadata:
   name: api-gateway
   annotations:
-    kubernetes.io/ingress.class: 'nginx'
-    nginx.ingress.kubernetes.io/rewrite-target: /  
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: nginx
   rules:
-  - host: "petclinic.deryabalaban.online"
+  - host: "www.deryabalaban.online"
     http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: api-gateway
-            port:
-              number: 8080
+        paths:
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: api-gateway
+              port:
+                number: 8080
