--- a/13_inclass_3_volumes/PART-1-mounthpath/mounthpath.yaml
+++ b/13_inclass_3_volumes/PART-1-mounthpath/mounthpath.yaml
@@ -13,6 +13,6 @@ spec:
   - name: test-volume
     hostPath:
       # directory location on host
-      path: /home/ubuntu/test-data
+      path: /root/test-data
       # this field is optional
       type: Directory
