--- a/13_inclass_3_volumes/part-2-pv-pvc/clarus-pv.yaml
+++ b/13_inclass_3_volumes/part-2-pv-pvc/clarus-pv.yaml
@@ -5,10 +5,10 @@ metadata:
   labels:
     type: local
 spec:
-  storageClassName: manual
+  storageClassName: standart
   capacity:
     storage: 5Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/home/ubuntu/pv-data"
+    path: "/c/Users/Dell/Desktop/pv-data"
