--- a/13_inclass_3_volumes/part-3-pv-pvc/pv-6g.yaml
+++ b/13_inclass_3_volumes/part-3-pv-pvc/pv-6g.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     type: local
 spec:
-  storageClassName: manual
+  storageClassName: standart
   capacity:
     storage: 6Gi
   accessModes:
