--- a/13_inclass_3_volumes/part-3-pv-pvc/pv-claim-7g.yaml
+++ b/13_inclass_3_volumes/part-3-pv-pvc/pv-claim-7g.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: pv-claim-7g
 spec:
-  storageClassName: manual
+  storageClassName: standart
   accessModes:
     - ReadWriteOnce
   resources:
