--- a/test.yaml
+++ b/test.yaml
@@ -1,14 +1,9 @@
 apiVersion: v1
-kind: PersistentVolumeClaim
+kind: Secret
 metadata:
-  name: MYAPP
+  name: mysecret
   namespace: default
-  labels:
-    app: MYAPP
-spec:
-  storageClassName: rook-ceph-block
-  accessModes:
-  - ReadWriteOnce
-  resources:
-    requests:
-      storage: 2Gi    
+type: Opaque
+data:
+  # Example:
+  # password: {{ .Values.password | b64enc }}
