--- a/14_inclass_4_sec_conmap/secrets/mysecret-pod.yaml
+++ b/14_inclass_4_sec_conmap/secrets/mysecret-pod.yaml
@@ -9,7 +9,12 @@ spec:
     env:
       - name: SECRET_USERNAME
         valueFrom:
-          
+          secretKeyRef:
+            name: mysecret
+            key: username
       - name: SECRET_PASSWORD
-        value: 1f2d1e2e67df
+        valueFrom:
+          secretKeyRef:
+            name: mysecret
+            key: password
   restartPolicy: Never
