--- a/14_inclass_4_sec_conmap/configmap/deployment.yaml
+++ b/14_inclass_4_sec_conmap/configmap/deployment.yaml
@@ -2,8 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: demo
-  labels:
-    app: demo
 spec:
   replicas: 1
   selector:
@@ -15,10 +13,18 @@ spec:
         app: demo
     spec:
       containers:
-        - name: demo
-          image: clarusway/demo:hello-config-env
+        - name:  demo
+          image: clarusway/demo:hello-config-file
           ports:
-          - containerPort: 8888
-          env:
-            - name: GREETING
-              value: selam          
+            - containerPort: 8888
+          volumeMounts:
+          - mountPath: /config/
+            name: demo-config-volume
+            readOnly: true
+      volumes:
+      - name: demo-config-volume
+        configMap:
+          name: demo-config
+          items:
+          - key: config
+            path: demo.yaml
