--- a/13_inclass_3_volumes/part-2-pv-pvc/clarus-pv.yaml
+++ b/13_inclass_3_volumes/part-2-pv-pvc/clarus-pv.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     type: local
 spec:
-  storageClassName: standart
+  storageClassName: standard
   capacity:
     storage: 5Gi
   accessModes:
