--- a/19_requestlimit/requestlimit.yaml
+++ b/19_requestlimit/requestlimit.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
   - name: requestlimit
-    image: ozgurozturknet/stress
+    image: ozgurozturknet/stress  # 30 s sonra sistemden 512M memory talebinde bulunur.
     resources:
       requests:
         memory: "64M"
