--- a/21_inclass_5/microservices/db-pv.yaml
+++ b/21_inclass_5/microservices/db-pv.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: db-pv-volume
+  name: db-pv-vol
   labels:
     type: local
 spec:
-  storageClassName: manual
+  storageClassName: standard
   capacity:
     storage: 5Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: /mnt/data
+    path: "/home/balaban/pv-data"
