--- a/test.yaml
+++ b/test.yaml
@@ -1,40 +1,14 @@
-# LimitRange for Pod or Container
 apiVersion: v1
-kind: LimitRange
+kind: PersistentVolumeClaim
 metadata:
-  name: LimitRangeName
+  name: MYAPP
   namespace: default
+  labels:
+    app: MYAPP
 spec:
-  limits:
-  # 'default' and 'defaultRequest' may not be specified when type is 'Pod'
-  - type: Container
-    default:
-      cpu: 100m
-      memory: 512Mi
-    defaultRequest:
-      cpu: 100m
-      memory: 256Mi
-    max:
-      cpu: 200m
-      memory: 512Mi
-    min:
-      cpu: 100m
-      memory: 256Mi
----
-# LimitRange for PersistentVolumeClaim
-apiVersion: v1
-kind: LimitRange
-metadata:
-  name: LimitRangeName
-  namespace: default
-spec:
-  limits:
-  - type: PersistentVolumeClaim
-    default:
-      storage: 2Gi
-    defaultRequest:
-      storage: 2Gi
-    max:
-      storage: 2Gi
-    min:
+  storageClassName: rook-ceph-block
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
       storage: 2Gi
