--- a/test.yaml
+++ b/test.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: default
 type: kubernetes.io/tls
 # The TLS secret must contain keys named 'tls.crt' and 'tls.key' that contain the certificate and private key to use for TLS.
-data:
+data:a
   tls.crt: base64 encoded public key content
   tls.key: base64 encoded private key content
 
