--- a/24_ingress/udemy/appingress.yaml
+++ b/24_ingress/udemy/appingress.yaml
@@ -6,7 +6,8 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
-    - http:
+    - host: k8sfundamentals.com
+      http:
         paths:
           - path: /blue
             pathType: Prefix
