--- a/24_ingress/udemy/todoingress.yaml
+++ b/24_ingress/udemy/todoingress.yaml
@@ -4,7 +4,8 @@ metadata:
   name: todoingress
 spec:
   rules:
-    - http:
+    - host: todoapp.com
+      http:
         paths:
           - path: /
             pathType: Prefix
