--- a/test.yaml
+++ b/test.yaml
@@ -11,10 +11,9 @@ spec:
       app: MYAPP
   replicas: 1
   strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
+    type: Recreate
+  nodeAffinity
+    
   template:
     metadata:
       labels:
