--- a/test.yaml
+++ b/test.yaml
@@ -1,69 +1,38 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: DaemonSet
 metadata:
-  name:  MYAPP
+  name: MYAPP
   namespace: default
   labels:
-    app:  MYAPP
+    app: MYAPP
 spec:
   selector:
     matchLabels:
       app: MYAPP
-  replicas: 1
-  strategy:
-    type: Recreate
-  nodeAffinity
-    
   template:
     metadata:
       labels:
-        app:  MYAPP
+        app: MYAPP
     spec:
-      # initContainers:
-        # Init containers are exactly like regular containers, except:
-          # - Init containers always run to completion.
-          # - Each init container must complete successfully before the next one starts.
+      tolerations:
+      # this toleration is to have the daemonset runnable on master nodes
+      # remove it if your masters can't run pods
+      - key: node-role.kubernetes.io/master
+        effect: NoSchedule
       containers:
-      - name:  MYAPP
-        image:  MYAPP:latest
+      - name: MYAPP
+        image: debian
         resources:
+          limits:
+            memory: 200Mi
           requests:
             cpu: 100m
-            memory: 100Mi
-          limits:
-            cpu: 100m
-            memory: 100Mi
-        livenessProbe:
-          tcpSocket:
-            port: 80
-          initialDelaySeconds: 5
-          timeoutSeconds: 5
-          successThreshold: 1
-          failureThreshold: 3
-          periodSeconds: 10
-        readinessProbe:
-          httpGet:
-            path: /_status/healthz
-            port: 80
-          initialDelaySeconds: 5
-          timeoutSeconds: 2
-          successThreshold: 1
-          failureThreshold: 3
-          periodSeconds: 10
-        env:
-        - name: DB_HOST
-          valueFrom:
-            configMapKeyRef:
-              name: MYAPP
-              key: DB_HOST
-        ports:
-        - containerPort:  80
-          name:  MYAPP
+            memory: 200Mi
         volumeMounts:
         - name: localtime
           mountPath: /etc/localtime
+      terminationGracePeriodSeconds: 30
       volumes:
-        - name: localtime
-          hostPath:
-            path: /usr/share/zoneinfo/Asia/Shanghai
-      restartPolicy: Always
+      - name: localtime
+        hostPath:
+          path: /usr/share/zoneinfo/Asia/Shanghai
