--- a/31_daemonset/daemonset.yaml
+++ b/31_daemonset/daemonset.yaml
@@ -17,7 +17,11 @@ spec:
       # this toleration is to have the daemonset runnable on master nodes
       # remove it if your masters can't run pods
       - key: node-role.kubernetes.io/master
+        operator: Exists
         effect: NoSchedule
+      - key: node-role.kubernetes.io/control-plane
+        operator: Exists
+        effect: NoSchedule        
       containers:
       - name: fluentd-elasticsearch
         image: quay.io/fluentd_elasticsearch/fluentd:v2.5.2
