--- a/test.yaml
+++ b/test.yaml
@@ -1,35 +1,30 @@
-apiVersion: apps/v1
-kind: StatefulSet
+apiVersion: batch/v1
+kind: Job
 metadata:
-  name: nginx
+  name: MYAPP
   namespace: default
+  labels:
+    app: MYAPP
 spec:
-  selector:
-    matchLabels:
-      app: nginx # has to match .spec.template.metadata.labels
-  serviceName: "nginx"
-  replicas: 3 # by default is 1
   template:
     metadata:
+      name: MYAPP
       labels:
-        app: nginx # has to match .spec.selector.matchLabels
+        app: MYAPP
     spec:
-      terminationGracePeriodSeconds: 10
       containers:
-      - name: nginx
-        image: nginx-slim:1.16.1
-        ports:
-        - containerPort: 80
-          name: web
+      - name: MYAPP
+        image: python:3.7.6-alpine3.10
+        command: ['sh', '-c', 'python3 manage.py makemigrations && python3 manage.py migrate']
+        env:
+        - name: ENV_NAME
+          value: ENV_VALUE
         volumeMounts:
-        - name: www
-          mountPath: /usr/share/nginx/html
-  volumeClaimTemplates:
-  - metadata:
-      name: www
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      storageClassName: "my-storage-class"
-      resources:
-        requests:
-          storage: 1Gi
+        - name: localtime
+          mountPath: /etc/localtime
+      volumes:
+      - name: localtime
+        hostPath:
+          path: /usr/share/zoneinfo/Asia/Shanghai
+      restartPolicy: OnFailure
+      dnsPolicy: ClusterFirst
