--- a/41_18-multiple&&init-container-pods/multi-container-pod.yaml
+++ b/41_18-multiple&&init-container-pods/multi-container-pod.yaml
@@ -15,13 +15,13 @@ spec:
     volumeMounts:
     - name: shared-data
       mountPath: /usr/share/nginx/html
-  - name: debian-container
-    image: debian
+  - name: sidecar-container
+    image: busybox
     volumeMounts:
     - name: shared-data
       mountPath: /pod-data
     command: ["/bin/sh"]
-    args: ["-c", "echo Hello from the debian container > /pod-data/index.html && sleep 60 d" ]
+    args: ['-c', 'echo "Hello from the debian container" > /pod-data/index.html && sleep 600']
 ---
 apiVersion: v1
 kind: Service   
