--- a/u_k8s_project/serviceaccount.yaml
+++ b/u_k8s_project/serviceaccount.yaml
@@ -3,26 +3,29 @@ kind: ServiceAccount
 metadata:
   name: sa-project
   namespace: default
+
 ---
-kind: ClusterRoleBinding
+
 apiVersion: rbac.authorization.k8s.io/v1
+# This cluster role binding allows anyone in the "manager" group to read secrets in any namespace.
+kind: ClusterRoleBinding
 metadata:
-  name: rb-project
-  namespace: default
+  name: sa-csr
 subjects:
 - kind: ServiceAccount
-  name: sa-project
+  name: sa-project # Name is case sensitive
   namespace: default
-  apiGroup: ""
 roleRef:
   kind: ClusterRole
   name: view
   apiGroup: rbac.authorization.k8s.io
----
+
+--- 
+
 apiVersion: v1
 kind: Pod
 metadata:
-  name: pod-proje
+  name: pod-sa
   namespace: default
 spec:
   serviceAccountName: sa-project
@@ -31,3 +34,4 @@ spec:
     image: ozgurozturknet/k8s:latest
     ports:
     - containerPort: 80
+
