--- a/u_k8s_project/statefullset.yaml
+++ b/u_k8s_project/statefullset.yaml
@@ -58,11 +58,10 @@ spec:
   volumeClaimTemplates:
   - metadata:
       name: mongo-pv-claim
-      annotations:
-        volume.beta.kubernetes.io/storage-class: "default"
     spec:
       accessModes:
         - ReadWriteOnce
+      storageClassName: standard  
       volumeMode: Filesystem
       resources:
         requests:
