--- a/u_k8s_project/wpingress.yaml
+++ b/u_k8s_project/wpingress.yaml
@@ -7,10 +7,11 @@ metadata:
     app: wordpress
   namespace: test
   annotations:
-    kubernetes.io/ingress.class: nginx
+    # kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: nginx 
   rules:
   - host: testblog.example.com
     http:
@@ -32,10 +33,11 @@ metadata:
     app: wordpress
   namespace: production
   annotations:
-    kubernetes.io/ingress.class: nginx
+    # kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: nginx 
   rules:
   - host: companyblog.example.com
     http:
