--- a/u_k8s_project/wptest.yaml
+++ b/u_k8s_project/wptest.yaml
@@ -10,6 +10,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   volumeMode: Filesystem
+  storageClassName: standard 
   resources:
     requests:
       storage: 5Gi
@@ -26,6 +27,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   volumeMode: Filesystem
+  storageClassName: standard 
   resources:
     requests:
       storage: 5Gi
@@ -54,27 +56,9 @@ spec:
       containers:
       - name: mysql-test
         image: mysql:5.6
-        env:
-        - name: MYSQL_ROOT_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-test-secret
-              key: MYSQL_ROOT_PASSWORD
-        - name: MYSQL_USER
-          valueFrom:
-            secretKeyRef:
-              name: mysql-test-secret
-              key: MYSQL_USER
-        - name: MYSQL_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-test-secret
-              key: MYSQL_PASSWORD
-        - name: MYSQL_DATABASE
-          valueFrom:
-            secretKeyRef:
-              name: mysql-test-secret
-              key: MYSQL_DATABASE      
+        envFrom:
+        - secretRef:
+            name: mysql-test-secret           
         resources:
           limits:
             memory: "1Gi"
