--- a/50_15-networkpolicy/clarusshop.yaml
+++ b/50_15-networkpolicy/clarusshop.yaml
@@ -12,6 +12,7 @@ spec:
     metadata:
       labels:
         app: clarusshop
+        role: frontend
     spec:
       containers:
       - name: clarusshop
