--- a/test.yaml
+++ b/test.yaml
@@ -1,14 +1,12 @@
 apiVersion: v1
-kind: PersistentVolumeClaim
+kind: Pod
 metadata:
-  name: MYAPP
-  namespace: default
   labels:
-    app: MYAPP
+    app: myapp
+    location: NA
+    type: frontend  
+  name: myapp-pod
 spec:
-  storageClassName: rook-ceph-block
-  accessModes:
-  - ReadWriteOnce
-  resources:
-    requests:
-      storage: 2Gi
+  containers:
+  - image: nginx
+    name: ng
