--- a/test.yaml
+++ b/test.yaml
@@ -1,40 +1,70 @@
-# LimitRange for Pod or Container
-apiVersion: v1
-kind: LimitRange
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: LimitRangeName
+  name:  MYAPP
   namespace: default
+  labels:
+    app:  MYAPP
 spec:
-  limits:
-  # 'default' and 'defaultRequest' may not be specified when type is 'Pod'
-  - type: Container
-    default:
-      cpu: 100m
-      memory: 512Mi
-    defaultRequest:
-      cpu: 100m
-      memory: 256Mi
-    max:
-      cpu: 200m
-      memory: 512Mi
-    min:
-      cpu: 100m
-      memory: 256Mi
----
-# LimitRange for PersistentVolumeClaim
-apiVersion: v1
-kind: LimitRange
-metadata:
-  name: LimitRangeName
-  namespace: default
-spec:
-  limits:
-  - type: PersistentVolumeClaim
-    default:
-      storage: 2Gi
-    defaultRequest:
-      storage: 2Gi
-    max:
-      storage: 2Gi
-    min:
-      storage: 2Gi
+  selector:
+    matchLabels:
+      app: MYAPP
+  replicas: 1
+  strategy:
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+    type: RollingUpdate
+  template:
+    metadata:
+      labels:
+        app:  MYAPP
+    spec:
+      # initContainers:
+        # Init containers are exactly like regular containers, except:
+          # - Init containers always run to completion.
+          # - Each init container must complete successfully before the next one starts.
+      containers:
+      - name:  MYAPP
+        image:  MYAPP:latest
+        resources:
+          requests:
+            cpu: 100m
+            memory: 100Mi
+          limits:
+            cpu: 100m
+            memory: 100Mi
+        livenessProbe:
+          tcpSocket:
+            port: 80
+          initialDelaySeconds: 5
+          timeoutSeconds: 5
+          successThreshold: 1
+          failureThreshold: 3
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /_status/healthz
+            port: 80
+          initialDelaySeconds: 5
+          timeoutSeconds: 2
+          successThreshold: 1
+          failureThreshold: 3
+          periodSeconds: 10
+        env:
+        - name: DB_HOST
+          valueFrom:
+            configMapKeyRef:
+              name: MYAPP
+              key: DB_HOST
+        ports:
+        - containerPort:  80
+          name:  MYAPP
+        volumeMounts:
+        - name: localtime
+          mountPath: /etc/localtime
+      volumes:
+        - name: localtime
+          hostPath:
+            path: /usr/share/zoneinfo/Asia/Shanghai
+      restartPolicy: Always
