--- a/10_inclass_2_po_deploy_rs/mypod.yaml
+++ b/10_inclass_2_po_deploy_rs/mypod.yaml
@@ -2,12 +2,11 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: nginx-pod
-  namespace: default
   labels:
     app: nginx
 spec:
   containers:
   - name: mynginx
-    image: "nginx:latest"
+    image: nginx
     ports:
-    - containerPort:  80
+    - containerPort: 80
