--- a/12_inclass_3_svc_ep/web-flask.yaml
+++ b/12_inclass_3_svc_ep/web-flask.yaml
@@ -3,8 +3,8 @@ kind: Deployment
 metadata:
   name: web-flask-deploy
   labels:
-    app: web-flask
-  namespace: demo
+    env: dev
+  namespace: demo  
 spec:
   replicas: 3
   selector:
