--- a/12_inclass_3_svc_ep/web-NodePort-svc.yaml
+++ b/12_inclass_3_svc_ep/web-NodePort-svc.yaml
@@ -2,12 +2,14 @@ apiVersion: v1
 kind: Service   
 metadata:
   name: web-flask-svc
+  namespace: demo
   labels:
     env: dev
 spec:
-  type: ClusterIP  
+  type: NodePort  
   ports:
   - port: 3000  
     targetPort: 5000
+    nodePort: 30036
   selector:
     app: web-flask
