--- a/13_inclass_4_volumes/part-2-pv-pvc/clarus-pv-claim.yaml
+++ b/13_inclass_4_volumes/part-2-pv-pvc/clarus-pv-claim.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: clarus-pv-claim
 spec:
-  storageClassName: standart
+  storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
