--- a/13_inclass_4_volumes/part-3-pv-pvc/pv-3g.yaml
+++ b/13_inclass_4_volumes/part-3-pv-pvc/pv-3g.yaml
@@ -5,11 +5,10 @@ metadata:
   labels:
     type: local
 spec:
-  storageClassName: standart
+  storageClassName: manual
   capacity:
     storage: 3Gi
   accessModes:
     - ReadWriteOnce
   hostPath:
     path: "/home/ubuntu/pv-data"
-  
