--- a/13_inclass_4_volumes/part-5-storageclass/sc-pv-claim.yaml
+++ b/13_inclass_4_volumes/part-5-storageclass/sc-pv-claim.yaml
@@ -3,9 +3,9 @@ kind: PersistentVolumeClaim
 metadata:
   name: sc-pv-claim
 spec:
-  storageClassName: standard
   accessModes:
-  - ReadWriteOnce
+    - ReadWriteOnce
   resources:
     requests:
       storage: 3Gi
+  storageClassName: local-path
