--- a/13_inclass_4_volumes/part-3-pv-pvc/pv-claim-2g.yaml
+++ b/13_inclass_4_volumes/part-3-pv-pvc/pv-claim-2g.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: pv-claim-2g
 spec:
-  storageClassName: standart
+  storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
