--- a/14_inclass_5_sec_conmap/configmap/nginx-deploy.yaml
+++ b/14_inclass_5_sec_conmap/configmap/nginx-deploy.yaml
@@ -32,7 +32,7 @@ spec:
             path: index.html
       - name: secret-volume
         secret:
-          secretName: mysecret
+          secretName: nginx-secret
           items:
           - key: password
             path: userpassword.txt
