--- a/20_13-resource-requirements-limits/clarus-deploy.yaml
+++ b/20_13-resource-requirements-limits/clarus-deploy.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     environment: dev
 spec:
-  replicas: 30
+  replicas: 20
   selector:
     matchLabels:
       app: nginx
@@ -19,3 +19,10 @@ spec:
         image: nginx
         ports:
         - containerPort: 80
+        resources:
+          requests:
+            memory: "100Mi"
+            cpu: "500m"
+          limits:
+            memory: "750Mi"
+            cpu: "750m"
