--- a/test.yaml
+++ b/test.yaml
@@ -1,9 +1,18 @@
-apiVersion: v1
-kind: Secret
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
 metadata:
-  name: mysecret
-  namespace: default
-type: Opaque
-data:
-  # Example:
-  # password: {{ .Values.password | b64enc }}
+  name: myapp
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: myapp
+  minReplicas: 1
+  maxReplicas: 3
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 50
