--- a/28_inclass_9_pod_scheduling/clarus-deploy-2.yaml
+++ b/28_inclass_9_pod_scheduling/clarus-deploy-2.yaml
@@ -21,6 +21,5 @@ spec:
         - containerPort: 80
       tolerations:
       - key: "clarus"
-        operator: "Equal"
-        value: "way"
-        effect: "NoSchedule"     
+        operator: "Exists"
+        effect: "NoSchedule"  
