--- a/23_inclass_8_sc_ingress/storageclass/storage-class.yaml
+++ b/23_inclass_8_sc_ingress/storageclass/storage-class.yaml
@@ -1,9 +1,9 @@
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  name: aws-standard
-provisioner: kubernetes.io/aws-ebs
+  name: myaws-sc
+provisioner: ebs.csi.aws.com
 volumeBindingMode: WaitForFirstConsumer
 parameters:
   type: gp2
-  fsType: ext4
+  fsType: ext4     
