--- a/25_eks-03-AWS-EKS-ALB-ingress/ingress.yaml
+++ b/25_eks-03-AWS-EKS-ALB-ingress/ingress.yaml
@@ -15,13 +15,13 @@ metadata:
     alb.ingress.kubernetes.io/healthy-threshold-count: '2'
     alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
     # To use certificate add annotations below.
-    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:828895145536:certificate/5d53544a-aeea-422f-9790-b60691b3b642
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:730335535548:certificate/da3f74ed-398b-4471-b46f-50514770d63a   # change this line
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
     alb.ingress.kubernetes.io/ssl-redirect: '443'
 
 spec:
   rules:
-    - host: www.deryabalaban.online
+    - host: www.balabandevops.online
       http:
         paths:
           - path: /account
