--- a/38_kubernetes-headless-service-and-services-without-selectors/db-clarus-service.yaml
+++ b/38_kubernetes-headless-service-and-services-without-selectors/db-clarus-service.yaml
@@ -5,4 +5,9 @@ metadata:
   labels:
     name: clarus-db-service
 spec:
+  ports:
+  - port: 3306
+    name: web
   clusterIP: None
+  selector:
+    app: clarus-db
