--- a/39_job-cronjob/job.yaml
+++ b/39_job-cronjob/job.yaml
@@ -6,7 +6,7 @@ spec:
   parallelism: 2
   completions: 10
   backoffLimit: 5
-  activeDeadlineSeconds: 100
+  # activeDeadlineSeconds: 100
   template:
     spec:
       containers:
